<resources>
    <string name="app_name">SimplyNote</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_submit_hint">Login</string>
    <string name="login_registration_hint">Registration</string>
    <string name="login_incorrect_inputs_message">Incorrect credentials</string>
    <string name="registration_confirm_password">Confirm password</string>
    <string name="registration_register_button_hint">Register</string>
    <string name="registration_this_field_cant_be_empty">This field can not be empty</string>
    <string name="registration_user_already_exists">User already exists</string>
    <string name="registration_user_insertion_failed">User can not be added</string>
    <string name="registry_verication_failed_message">User verification failed try again later</string>
    <string name="registration_user_added_message">User added</string>
    <string name="home_checklists_tab_item">Checklists</string>
    <string name="home_notes_tab_item">Notes</string>
    <string name="home_error_fragment_text">ERROR</string>
    <string name="checklist_fragment_add_new_check_list_button_text">Add new Checklist</string>
    <string name="noteslist_fragment_add_new_note_button_text">Add new Note</string>
    <string name="noteslists_fragment_fetch_data_failure_message">Notes load failed</string>
    <string name="new_note_top_label">New Note</string>
    <string name="new_note_title_label">Title</string>
    <string name="new_note_content_label">Content</string>
    <string name="new_note_add_new_note_label">ADD NEW NOTE</string>
    <string name="new_note_validation_error">This field can not be empty</string>
    <string name="new_note_insertion_failure_message">Insertion of new Note failed</string>
    <string name="new_note_insertion_succeed">Note inserted</string>
    <string name="new_checklist_top_label">New Checklist</string>
    <string name="new_checklist_title_hint">Checklist name</string>
    <string name="new_checklist_content_hint">Checklist item</string>
    <string name="new_checklist_add_new_checklist">ADD NEW CHECKLIST</string>
    <string name="new_checklist_add_new_item">ADD NEW ITEM</string>
    <string name="new_checlist_new_item_label">New Checklist Item</string>
    <string name="list_item_remove_button_text">DELETE</string>
    <string name="new_checklist_remove_row_prompt">Do you want to remove this row?</string>
    <string name="new_checklist_submit_prompt">Do you want accept this checklist?</string>
    <string name="new_checklist_validation_fill_name">Fill checklist name</string>
    <string name="new_checklist_validation_fill_items">Your checklist is empty</string>
    <string name="new_checklist_insertion_failure_message">Checklist insertion failed</string>
    <string name="checklists_load_fail_message">Checklists load failed</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="list_item_date_created_preffix">Created at </string>
    <string name="not_available">N/A</string>
    <string name="checklist_remove_ask_message">Do you want remove this checklist?</string>
    <string name="checklist_removed_properly_message">Checklist removed</string>
    <string name="checklist_removed_failure_message">Cannot remove this checklist. Try again later</string>
    <string name="note_remove_ask_message">Do you want to remove this note?</string>
    <string name="note_removed_properly_message">Note removed</string>
    <string name="note_removed_failure_message">Cannot remove this note. Try again later</string>
</resources>
